# zipcpu_coursework

./: .gitignore  README.md
fsm/ledwalker/: CMakeLists.txt  Makefile  ledwalker.cpp  ledwalker.pcf  ledwalker.v  wavedrom_json.json
fsm/ledwalkersm/: CMakeLists.txt  Makefile  ledwalkersm.cpp  ledwalkersm.pcf  ledwalkersm.sby  ledwalkersm.v  wavedrom_json.json
pipelines/requestwalker/: CMakeLists.txt  Makefile  requestwalker.cpp  requestwalker.pcf  requestwalker.v
pipelines/wishbonewalker/: CMakeLists.txt  Makefile  wavedrom_json.json  wishbonewalker.cpp  wishbonewalker.pcf  wishbonewalker.sby  wishbonewalker.v
pipelines/wishbonewalker/wishbonewalker/: status.sqlite
registers/blinky/: CMakeLists.txt  Makefile  blinky.cpp  blinky.pcf  blinky.v
registers/dimmer/: CMakeLists.txt  Makefile  dimmer.cpp  dimmer.v
registers/hertz/: CMakeLists.txt  Makefile  hertz.cpp  hertz.v
registers/tfail/: Makefile  tfail.v
uart_tx/: CMakeLists.txt  Makefile  hello.cpp  hello.sby  hello.v  testb.h  uartport.v  uartsim.cpp  uartsim.h  uarttx.pcf
wires/: CMakeLists.txt  Makefile  thruwire.cpp  thruwire.pcf  thruwire.v
wordtx/: CMakeLists.txt  Makefile  chgdetector.v  counter.v  top.v  txdata.v  uartport.sby  uartsim.h  worder.pcf
